--- a/.github/workflows/update_news.yml
+++ b/.github/workflows/update_news.yml
@@ -2,15 +2,16 @@ name: Update news.json every 6 hours
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # every 6 hours :contentReference[oaicite:10]{index=10}
-  workflow_dispatch:
+    - cron: '0 */6 * * *'  # every 6 hours UTC
+  workflow_dispatch:        # allows manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repo
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -21,13 +22,13 @@ jobs:
         run: |
           pip install feedparser requests beautifulsoup4 sumy
 
-      - name: Generate news.json
+      - name: Run the generator
         run: python generate_news.py
 
-      - name: Commit and push
+      - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
-          git commit -am "Auto-update news.json"
+          git add news.json
+          git commit -m "🤖 Auto-update news.json" || echo "No changes to commit"
           git push
-        continue-on-error: true
